--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "investec-kata-assessment",
   "version": "1.0.0",
   "description": "Investec Kata Assessment - implement string parser to add numbers delimited by some string",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "compile": "tsc src/main.ts",
+    "start": "node src/main.js",
+    "compile-start": "tsc src/main.ts && src/node main.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +25,26 @@
   },
   "homepage": "https://github.com/Cazs/InvestecKata#readme",
   "devDependencies": {
-    "jest": "^23.1.0"
+    "@types/node": "^10.3.1",
+    "jest": "^23.1.0",
+    "typescript": "^2.9.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  },
+  "dependencies": {
+    "@types/jest": "^23.0.0",
+    "ts-jest": "^22.4.6"
   }
 }
