Modified add(numbers: string) to handle new character or comma delimeters. Added tests for new line & comma delimited numbers. Fixed package.json compile & start scripts

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "compile": "tsc src/main.ts",
     "start": "node src/main.js",
-    "compile-start": "tsc src/main.ts && src/node main.js"
+    "compile-start": "tsc ./src/main.ts && node ./src/main.js"
   },
   "repository": {
     "type": "git",
